--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
         "babel-cli": "^6.26.0",
         "babel-preset-env": "^1.7.0",
         "babel-runtime": "^6.26.0",
-        "graphql": "^14.0.2"
+        "bignumber.js": "^7.2.1",
+        "bluebird": "^3.5.2",
+        "bunyan": "^1.8.12",
+        "graphql": "^14.0.2",
+        "lodash": "^4.17.11",
+        "web3": "0.20.6"
     },
     "scripts": {
         "start": "nodemon --exec yarn run babel-node ./src/server.js | bunyan"
@@ -17,6 +22,7 @@
     "devDependencies": {
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-flow": "^6.23.0"
+        "babel-preset-flow": "^6.23.0",
+        "nodemon": "^1.18.4"
     }
 }
