--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
         "babel-runtime": "^6.26.0",
         "bignumber.js": "^7.2.1",
         "bluebird": "^3.5.2",
-        "bunyan": "^1.8.12",
         "graphql": "^14.0.2",
         "lodash": "^4.17.11",
+        "pino": "^5.6.0",
         "web3": "0.20.6"
     },
     "scripts": {
-        "start": "nodemon --exec yarn run babel-node ./src/server.js | bunyan"
+        "start": "nodemon --exec yarn run babel-node ./src/server.js | pino-pretty -c -l",
+        "test": "jest --watch"
     },
     "devDependencies": {
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-flow": "^6.23.0",
-        "nodemon": "^1.18.4"
+        "jest": "^23.6.0",
+        "nodemon": "^1.18.4",
+        "pino-pretty": "^2.2.0"
     }
 }
