--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "bignumber.js": "^7.2.1",
         "bluebird": "^3.5.2",
         "graphql": "^14.0.2",
+        "ioredis": "^4.0.0",
         "lodash": "^4.17.11",
         "pino": "^5.6.0",
         "web3": "0.20.6"
