--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
         "babel-runtime": "^6.26.0",
         "bignumber.js": "^7.2.1",
         "bluebird": "^3.5.2",
+        "dotenv": "^6.2.0",
         "graphql": "^14.0.2",
         "ioredis": "^4.0.0",
         "lodash": "^4.17.11",
         "pino": "^5.6.0",
         "truffle-contract": "^3.0.6",
+        "truffle-hdwallet-provider": "^0.0.6",
         "web3": "0.20.6"
     },
     "scripts": {
