--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
         restart: always
         environment:
             - NODE_ENV=production
+        ports:
+            - 8080:8080
         networks:
             - redis
 
