--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
         restart: always
         environment:
             - NODE_ENV=production
+            - WEB3_PRIVATE_KEY=${WEB3_PRIVATE_KEY}
         ports:
             - 8080:8080
         networks:
