--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "lodash": "^4.17.11",
         "pino": "^5.6.0",
         "truffle-contract": "^3.0.6",
+        "uuid": "^3.3.2",
         "web3": "^1.0.0-beta.37"
     },
     "scripts": {
