--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "pino": "^5.6.0",
         "truffle-contract": "^3.0.6",
         "uuid": "^3.3.2",
-        "web3": "^1.0.0-beta.47"
+        "web3": "1.0.0-beta.36"
     },
     "scripts": {
         "start": "nodemon --exec yarn run babel-node ./src/server.js | pino-pretty -c -l",
